syntax = "proto3";

package hello;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc Goodbye (GoodbyeRequest) returns (HelloResponse);
}

message GoodbyeRequest {
  string message = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
  bool success = 2;
}